# vision-based-rl-agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TECHNICAL_REPORT.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/: default.yaml  live.yaml  live_smoke.yaml  ppo_woodcutting.yaml  ppo_woodcutting_dr.yaml  ppo_woodcutting_lstm.yaml  ppo_woodcutting_repr.yaml
scripts/: compare_final.py  compare_recurrent.py  compare_representation.py  compare_robustness.py  draw_architecture.py  evaluate_checkpoints.py  plot_training.py  render_dr_samples.py
src/osrs_rl/: __init__.py
src/osrs_rl/agents/: base_policy.py  networks.py  ppo.py  rollout_buffer.py
src/osrs_rl/evaluation/: evaluate.py
src/osrs_rl/input_control/: controller.py  safety.py
src/osrs_rl/rewards/: base.py  components.py
src/osrs_rl/training/: checkpoint.py  train.py  trainer.py
src/osrs_rl/utils/: config.py  logging.py  seeding.py
src/osrs_rl/vision/: capture.py  preprocess.py
tests/: test_action_masking.py  test_aux_loss.py  test_env.py  test_live.py  test_ppo_smoke.py  test_randomization.py  test_recurrent.py  test_rewards.py  test_wrappers.py
